--- a/index.html
+++ b/index.html
@@ -10,7 +10,27 @@
 </head>
 <body>
 
-    <h1>Project Starter</h1>
+    <header>
+        <form id="from">
+            <input type="text" id="search" class="search" placeholder="Search">
+        </form>
+    </header>
+
+    <main id="id">
+        <!-- movie cards will be generated here -->
+        <div class="movie">
+            <img src="https://images.unsplash.com/photo-1489599849927-2ee91cede3ba?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=870&q=80" alt="">
+            <div class="movie-info">
+                <h3>Movie Tittle</h3>
+                <span class="green">9.8</span>
+            </div>
+            <div class="overview">
+                <h3>overview</h3>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis laboriosam obcaecati harum iusto dolorum iure quia aliquam quo alias rerum?
+
+            </div>
+        </div>
+    </main>
     
 
     <script src="script.js"></script>
